<resources>
    <string name="app_name">Form</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="mocky_url">Mocky URL</string>
    <string name="submit">Submit</string>
</resources>